--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@ant-design/pro-layout": "^5.0.12",
+    "@antv/data-set": "^0.11.5",
+    "@antv/g2": "^4.0.15",
+    "@antv/g6": "^3.7.0",
     "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.2.17",
     "lint-staged": "^10.0.7",
